# anwe

./: .gitignore  ANWE.md  BUILDSHEET.md  COMPARISON.md  CONSTRAINTS.md  CONTINUATION.md  README.md  SHOWCASE.md  WHY_ANWE.md  __init__.py  anwefirst.md  breathe.py  core.py  hello_world.py  movement.py  observe.py  pulse.py
anwe-runtime/: BRIDGES.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  FEATURE_MATRIX.md  GETTING_STARTED.md  LANGUAGE_REFERENCE.md  LICENSE  README.md  ROADMAP.md  V05_PLAN.md  V06_PLAN.md  primordia_cognitive_cycle.anwe
anwe-runtime/crates/anwe-bridge/: Cargo.toml
anwe-runtime/crates/anwe-bridge/src/: lib.rs  participant.rs  registry.rs  stdio.rs  wire.rs
anwe-runtime/crates/anwe-core/: Cargo.toml
anwe-runtime/crates/anwe-core/src/: agent.rs  attention.rs  history.rs  lib.rs  link.rs  pending.rs  signal.rs  supervisor.rs  temporal.rs  uncertainty.rs
anwe-runtime/crates/anwe-parser/: Cargo.toml
anwe-runtime/crates/anwe-parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs  token.rs
anwe-runtime/crates/anwe-python/: Cargo.toml
anwe-runtime/crates/anwe-python/src/: lib.rs
anwe-runtime/crates/anwe-runtime/: Cargo.toml
anwe-runtime/crates/anwe-runtime/src/: channel.rs  concurrent.rs  engine.rs  lib.rs  scheduler.rs
anwe-runtime/editors/vscode/: README.md  language-configuration.json  package.json
anwe-runtime/editors/vscode/syntaxes/: anwe.tmLanguage.json
anwe-runtime/examples/: adaptive_router.anwe  adaptive_router_demo.rs  ai_coordinator.anwe  ai_coordinator_v06.anwe  alert_escalation.anwe  alert_escalation_demo.rs  anomaly_detection.anwe  anomaly_detection_demo.rs  attention_decay.anwe  backtracking.anwe  backtracking_demo.rs  batch_inference.anwe  batch_inference_demo.rs  bias_detection.anwe  bias_detection_demo.rs  bridge_echo.anwe  cognitive_pipeline.anwe  computable_mind.anwe  confidence_calibration.anwe  confidence_calibration_demo.rs  confidence_fusion.anwe  confidence_fusion_demo.rs  consensus_protocol.anwe  consensus_protocol_demo.rs  cost_tracking.anwe  cost_tracking_demo.rs  data_pipeline_v08.anwe  distillation.anwe  distillation_demo.rs  dual_mind.anwe  dynamic_agents.anwe  dynamic_agents_demo.rs  edge_cloud.anwe  edge_cloud_demo.rs  episodic_memory.anwe  episodic_memory_demo.rs  error_recovery.anwe  error_recovery_demo.rs  eval_harness.anwe  eval_harness_demo.rs  (+89 more)
anwe-runtime/lib/: std.anwe
anwe-runtime/spec/: cognitive_showcase.anwe  neural_mesh.anwe
anwe-runtime/src/: main.rs
participants/: __init__.py  mnemonic_participant.py  test_mnemonic_bridge.py
spec/: SPECIFICATION.md  grammar.ebnf  hello_world.anwe
